# imsearch-tools

./: .dockerignore  Dockerfile  README.md  download_demo.py  pyproject.toml  query_demo.py
imsearchtools/: __init__.py  http_service.py  http_service_helper.py
imsearchtools/_tests/: test_bing_api_v5.py  test_google_web.py
imsearchtools/engines/: __init__.py  api_credentials.py  bing_api_v1.py  bing_api_v5.py  flickr_api.py  google_api.py  google_old_api.py  google_old_web.py  google_web.py  search_client.py
imsearchtools/postproc_modules/: example_textlog_module.py  module_finder.py  rr_text_query_module.py  visor_category.py  visor_faces.py
imsearchtools/process/: callback_handler.py  callback_handler_multiprocessing.py  callback_handler_zmq.py  image_getter.py  image_processor.py  imutils.py
imsearchtools/utils/: result_page_gen.py
